--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,16 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "browser-preview",
+            "request": "launch",
+            "name": "Browser Preview: Launch",
+            "url": "http://localhost"
+        },
+        {
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
+            "url": "http://localhost",
             "webRoot": "${workspaceFolder}"
         }
     ]
